--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -29,7 +29,8 @@ html { height: 100%; scroll-behavior: smooth; }
 
 body {
   color: black;
-  font-family: monospace;
+  font-family: "Mi", "monospace";
+  src: url("/assets/fonts/Mi.ttf");
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
