--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: "en" }}">
-  {%- include head.html -%}
-  <body a="{{ site.theme_config.appearance | default: "auto" }}">
-    <main class="page-content" aria-label="Content">
-      <div class="w">
-        {{ content }}
-      </div>
-    </main>
+<html lang="{{ page.lang | default: " en" }}">
+{%- include head.html -%}
 
-    {% if page.custom_js %}
-      {% for js_file in page.custom_js %}
-        <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
-      {% endfor %}
-    {% endif %}
-    <a href="https://github.com/david2005yunqi/david2005yunqi.github.io">云起的主页</a> © 2020-Now by <a href="https://github.com/david2005yunqi">云起</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;">
-  </body>
+<body a="{{ site.theme_config.appearance | default: " auto" }}">
+  <main class="page-content" aria-label="Content">
+    <div class="w">
+      {{ content }}
+    </div>
+  </main>
+
+  {% if page.custom_js %}
+  {% for js_file in page.custom_js %}
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
+  {% endfor %}
+  {% endif %}
+  <a href="https://github.com/david2005yunqi/david2005yunqi.github.io">云起的主页</a> © 2020-Now is licensed under <a
+    href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+</body>
+
 </html>
