--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   {% endif %}
   <a href="https://github.com/david2005yunqi/david2005yunqi.github.io">云起的主页</a> © 2020-Now is licensed under <a
     href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+  <a href="https://hyperos.mi.com/font">MiSans</a>是本网站使用的字体</a>
 </body>
 
 </html>
