--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,7 @@
   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
   {% endfor %}
   {% endif %}
-  <a href="https://github.com/david2005yunqi/david2005yunqi.github.io">云起的主页</a> © 2020-Now is licensed under <a
-    href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
-  <a href="https://hyperos.mi.com/font">MiSans</a>是本网站使用的字体</a>
+  <a href="https://hyperos.mi.com/font">MiSans</a>是本网站使用的字体 | 云起的主页 © 2020-至今 基于协议 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
 </body>
 
 </html>
